Change <Header> tultip

--- a/comb.html
+++ b/comb.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="combstyles.css">
 </head>
 <body>
-<header class=page-header>Хедер</header>
+<header class=page-header>Header</header>
 <div class="page">
     <div class="settingsText">Sphere radius<br>Number of elements<br>Speed<br>Volume
     </div>
