--- a/comb.html
+++ b/comb.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="combstyles.css">
 </head>
 <body>
-<header class=page-header>Header</header>
+<header class=page-header>Head</header>
 <div class="page">
     <div class="settingsText">Sphere radius<br>Number of elements<br>Speed<br>Volume
     </div>
         <div class="settingsRange">
-            <input title="Sphere Radius" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2" id="volume"><br>
-            <input title="Number of elements" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2" id="volume"><br>
-            <input title="Speed" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2"><br>
+            <input title="Sphere Radius" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2"><br><br>
+            <input title="Number of elements" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2"><br><br>
+            <input title="Speed" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2"><br><br>
             <input title="Volume" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2" id="volume"><br>
         </div><br>
 
