--- a/comb.html
+++ b/comb.html
@@ -10,20 +10,20 @@
     <div class="settingsText">Sphere radius<br>Number of elements<br>Speed<br>Volume
     </div>
         <div class="settingsRange">
-            <input title="Sphere Radius" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2"><br><br>
+            <input title="Sphere Radius" class="Volume" type="range" min="40" max="100" step="1" value="70" id="sphereRadius"><br><br>
             <input title="Number of elements" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2"><br><br>
-            <input title="Speed" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2"><br><br>
-            <input title="Volume" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.2" id="volume"><br>
+            <input title="Speed" class="Volume" type="range" min="30" max="200" step="1" value="85" id="codeSpeed"><br><br>
+            <input title="Volume" class="Volume" type="range" min="0" max="0.5" step="0.01" value="0.25" id="volume"><br>
         </div><br>
 
     <div class="sortPlace">
-        <canvas id="canvas" width="700" height="700"></canvas>
+        <canvas id="canvas" width="900" height="900"></canvas>
     </div>
     <button onclick="initSort()">Start</button>
     <button onclick="" class="StopButton">Reset</button>
 </div>
 <footer class=page-footer>Футер</footer>
+</body>
 <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
 <script src="combSortScript.js"></script>
-</body>
 </html>
