start button fix; function expression > function declaration clean the code

--- a/comb.html
+++ b/comb.html
@@ -20,7 +20,7 @@
         <canvas id="canvas" width="900" height="900"></canvas>
     </div>
     <input value="Play" type="button" onclick="startButton()" id="StartButton"><br><br>
-    <input value="Pause" type="button" onclick="resetArray()">
+    <input value="Pause" type="button" onclick="resetButton()">
 </div>
 <footer class=page-footer>Футер</footer>
 </body>
