range prop. change

--- a/comb.html
+++ b/comb.html
@@ -17,15 +17,8 @@
             <option value = "cocktailSort">Cocktail sort</option>
         </select>
         <br>
-        <select name = "sortViewDom" onchange="changeSortType()">
-            <option value = "roundView">Round view</option>
-            <option value = "classicView">Classic view</option>
-            <option value = "gradientView">Gradient view</option>
-        </select>
     </form>
         <br>
-        <input value="Play" type="button" onclick="startButton()" id="StartButton"> <br>
-        <input value="Reset" type="button" onclick="resetButton()"> <br>
         <div class="settingsRange">
             Sphere Radius & Lines height / Brightness<br>
             <input title="Sphere Radius" class="rangeCSS" type="range" min="30" max="150" step="1" value="75" oninput="changeRadius()" id="sphereRadius"><br><br>
@@ -38,12 +31,16 @@
         </div><br>
     </div>
     <div class="sortViewsContainer">
-        <div class="sortButton sortButtonRound"><img src="roundview.png" width="120px">
+        <div class="sortButton transition" id = "roundView" onclick="changeSortView('roundView')"><img src="roundview.png" width="120px">
         </div>
-        <div class="sortButton sortButtonClassic"><img src="classicview.png" width="120px">
+        <div class="sortButton transition" id = "classicView" onclick="changeSortView('classicView')"><img src="classicview.png" width="120px">
         </div>
-        <div class="sortButton sortButtonGradient"><img src="gradientview.png" width="120px">
-        </div>
+        <div class="sortButton transition" id = "gradientView" onclick="changeSortView('gradientView')"><img src="gradientview.png" width="120px">
+        </div><br>
+            <div class="buttonContainer">
+                <div class="playButton button" onclick="startButton()"><img src="play.png" width="30px"></div>
+                <div class="resetButton button" onclick="startButton()"><img src="reset.png" width="30px"></div>
+            </div>
         <br>
         <div class="sortPlace">
             <canvas id="canvas" width="900" height="900"></canvas>
