range prop. change

--- a/comb.html
+++ b/comb.html
@@ -38,8 +38,8 @@
         <div class="sortButton transition" id = "gradientView" onclick="changeSortView('gradientView')"><img src="gradientview.png" width="120px">
         </div><br>
             <div class="buttonContainer">
-                <div class="playButton button" onclick="startButton()"><img src="play.png" width="30px"></div>
-                <div class="resetButton button" onclick="startButton()"><img src="reset.png" width="30px"></div>
+                <div class="playButton button" onclick="startButton()"><div class="sprite-play"></div></div>
+                <div class="resetButton button" onclick="resetButton()"><div class="sprite-reset"></div></div>
             </div>
         <br>
         <div class="sortPlace">
@@ -54,3 +54,6 @@
 </body>
 <script src="combSortScript.js"></script>
 </html>
+
+<!--<i class="sprite sprite-fb"></i>-->
+<!--<i class="sprite sprite-pause"></i>-->
