change sort fix & some design applied

--- a/comb.html
+++ b/comb.html
@@ -6,26 +6,27 @@
     <link rel="stylesheet" href="combstyles.css">
 </head>
 <body>
-<header class = "page-header" role = "banner">Algorithm visualization</header>
-
+<header class = "page-header" role = "banner">Sort algorithm visualization</header>
 <div class="mainPage" role="main">
+    <div class = "settingsPanelBox"></div>
     <div class="settingsPanel">
     <form>
-        <select name = "sortTypeDom" onchange="changeSortType()">
+        <label class="label">Chose sort algorithm type:</label><br>
+        <select name = "sortTypeDom" class="softFlowSelect" onchange="changeSortType()">
             <option value = "combSort">Comb sort</option>
             <option value = "bubbleSort">Bubble sort</option>
             <option value = "cocktailSort">Cocktail sort</option>
-        </select>
-        <br>
+        </select><br><br>
+        <label class="label">Settings:</label>
+        <hr>
     </form>
-        <br>
         <div class="settingsRange">
             Sphere Radius & Lines height / Brightness<br>
-            <input title="Sphere Radius" class="rangeCSS" type="range" min="30" max="150" step="1" value="75" oninput="changeRadius()" id="sphereRadius"><br><br>
+            <input title="Sphere Radius" class="rangeCSS" type="range" min="30" max="150" step="1" value="75" oninput="changeRadius()" id="sphereRadius"><br>
             Number of elements<br>
-            <input title="Number of elements" class="rangeCSS" type="range" min="30" max="240" step="1" value="125" oninput="calcNewArray()" id="elementsNumb"><br><br>
+            <input title="Number of elements" class="rangeCSS" type="range" min="30" max="240" step="1" value="125" oninput="calcNewArray()" id="elementsNumb"><br>
             Speed<br>
-            <input title="Speed" class="rangeCSS" type="range" min="10" max="200" step="5" value="105" oninput="changeSpeed()" id="codeSpeed"><br><br>
+            <input title="Speed" class="rangeCSS" type="range" min="10" max="200" step="5" value="105" oninput="changeSpeed()" id="codeSpeed"><br>
             Volume<br>
             <input title="Volume" class="rangeCSS" type="range" min="0" max="0.05" step="0.0005" value="0.025" id="volume"><br>
         </div><br>
@@ -50,6 +51,7 @@
         </div>
     </div>
 </div>
+
 
 <footer class=page-footer>
     Alexander Vaganov <br>
