--- a/comb.html
+++ b/comb.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Sound Test</title>
+<title>Sort algorithm visualization</title>
     <meta charset="UTF-8">
+    <meta name="description" content="Here is sort, Bubble sort & Cocktail Shake sort visualised via 3 graph. methods">
     <link rel="stylesheet" href="combstyles.css">
 </head>
+
 <body>
+<div class = "settingsPanelBox"></div>
 <header class = "page-header" role = "banner">Sort algorithm visualization</header>
 <div class="mainPage" role="main">
-    <div class = "settingsPanelBox"></div>
+
+    <!--settings, ranges&values, sortTypeSelect-->
     <div class="settingsPanel">
     <form>
         <label class="label">Chose sort algorithm type:</label><br>
@@ -16,43 +21,41 @@
             <option value = "combSort">Comb sort</option>
             <option value = "bubbleSort">Bubble sort</option>
             <option value = "cocktailSort">Cocktail sort</option>
-        </select><br><br>
-        <label class="label">Settings:</label>
-        <hr>
-    </form>
+        </select>
+    </form><br>
+        <label class="label">Settings:</label><hr>
         <div class="settingsRange">
-            Sphere Radius & Lines height / Brightness<br>
+            Sphere Radius &amp; Lines height / Brightness<br>
             <input title="Sphere Radius" class="rangeCSS" type="range" min="30" max="150" step="1" value="75" oninput="changeRadius()" id="sphereRadius"><br>
             Number of elements<br>
             <input title="Number of elements" class="rangeCSS" type="range" min="30" max="240" step="1" value="125" oninput="calcNewArray()" id="elementsNumb"><br>
             Speed<br>
             <input title="Speed" class="rangeCSS" type="range" min="10" max="200" step="5" value="105" oninput="changeSpeed()" id="codeSpeed"><br>
             Volume<br>
-            <input title="Volume" class="rangeCSS" type="range" min="0" max="0.05" step="0.0005" value="0.025" id="volume"><br>
-        </div><br>
+            <input title="Volume" class="rangeCSS" type="range" min="0" max="0.05" step="0.0005" value="0.025" id="volume">
+        </div>
     </div>
+    <!----->
+
+    <!--buttons, canvas, sortViews -->
     <div class="sortViewsContainer">
-        <div class="sortButton transition" id = "roundView" onclick="changeSortView('roundView')"><img src="roundview.png" width="120px">
-        </div>
-        <div class="sortButton transition" id = "classicView" onclick="changeSortView('classicView')"><img src="classicview.png" width="120px">
-        </div>
-        <div class="sortButton transition" id = "gradientView" onclick="changeSortView('gradientView')"><img src="gradientview.png" width="120px">
-        </div><br>
+        <div class="sortButton transition" id = "roundView" onclick="changeSortView('roundView')"></div>
+        <div class="sortButton transition" id = "classicView" onclick="changeSortView('classicView')"></div>
+        <div class="sortButton transition" id = "gradientView" onclick="changeSortView('gradientView')"></div><br>
             <div class="buttonContainer">
                 <div class="playButton button transition" id = "firstButton" onclick="startButton()">
-                    <div class="sprite-play"></div></div>
+                    <div class="sprite-play"></div>
+                </div>
                 <div class="resetButton button transition" onclick="resetButton()">
                     <div class="sprite-reset"></div>
                 </div>
-            </div>
-        <br>
+            </div><br>
         <div class="sortPlace">
             <canvas id="canvas" width="900" height="900"></canvas>
         </div>
     </div>
+    <!----->
 </div>
-
-
 <footer class=page-footer>
     Alexander Vaganov <br>
     Russian Federation, Ufa 2017</footer>
@@ -60,5 +63,3 @@
 <script src="combSortScript.js"></script>
 </html>
 
-<!--<i class="sprite sprite-fb"></i>-->
-<!--<i class="sprite sprite-pause"></i>-->
