--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>Sort algorithm visualization</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Here is sort, Bubble sort & Cocktail Shake sort visualised via 3 graph. methods">
+    <meta name="description" content="Here is sort, Bubble sort &amp; Cocktail Shake sort visualised via 3 graph. methods">
     <link rel="stylesheet" href="docs/combstyles.css">
 </head>
 
