--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Sort algorithm visualization</title>
     <meta charset="UTF-8">
     <meta name="description" content="Here is sort, Bubble sort & Cocktail Shake sort visualised via 3 graph. methods">
-    <link rel="stylesheet" href="combstyles.css">
+    <link rel="stylesheet" href="docs/combstyles.css">
 </head>
 
 <body>
@@ -60,6 +60,6 @@
     Alexander Vaganov <br>
     Russian Federation, Ufa 2017</footer>
 </body>
-<script src="combSortScript.js"></script>
+<script src="docs/combSortScript.js"></script>
 </html>
 
