--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
             <input title="Volume" class="rangeCSS" type="range" min="0" max="0.05" step="0.0005" value="0.025" id="volume">
         </div>
     </div>
-    <!--->
 
-    <!--buttons, canvas, sortViews-->
+    <!--buttons canvas & sortViews-->
     <div class="sortViewsContainer">
         <div class="sortButton transition" id = "roundView" onclick="changeSortView('roundView')"></div>
         <div class="sortButton transition" id = "classicView" onclick="changeSortView('classicView')"></div>
@@ -54,12 +53,14 @@
             <canvas id="canvas" width="900" height="900"></canvas>
         </div>
     </div>
-    <!--->
 
 </div>
+
 <footer class=page-footer>
     Alexander Vaganov <br>
-    Russian Federation, Ufa 2017</footer>
+    Russian Federation, Ufa 2017
+</footer>
+
 </body>
 <script src="combSortScript.js"></script>
 </html>
