--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="playButton button transition" id = "firstButton" onmousedown="mouseDown()" onclick="startButton()">
                     <div class="sprite-play"></div>
                 </div>
-                <div class="resetButton button transition" onclick="resetButton()">
+                <div class="resetButton button transition" onclick="calcNewArray()">
                     <div class="sprite-reset"></div>
                 </div>
             </div><br>
